# investiq-ai

./: .gitignore  PROJECT_CONTEXT.md  README.md  investment-assistant-AGENTS.md  investment-assistant-spec.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  brief.py  export.py  financial.py  news.py  search.py  stock.py  technical.py  watchlist.py
backend/app/middleware/: rate_limit.py
backend/app/models/: database.py  schemas.py
backend/app/services/: ai_service.py  auth_service.py  cache.py  financial_service.py  finnhub_client.py  news_service.py  stock_service.py  technical_service.py  yf_session.py
backend/app/services/prompts/: brief.txt  news_summary.txt
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginPage.tsx  UserMenu.tsx
frontend/src/components/brief/: BriefDisplay.tsx
frontend/src/components/financial/: EarningsChart.tsx  FinancialRatiosPanel.tsx  index.ts
frontend/src/components/news/: NewsPanel.tsx
frontend/src/components/shared/: ErrorMessage.tsx  ExportMenu.tsx  LoadingSpinner.tsx  RefreshButton.tsx  SentimentBadge.tsx
frontend/src/components/stock/: StockQuoteCard.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useFinancial.ts  useNews.ts  useStock.ts  useTechnical.ts  useTheme.ts  useWatchlist.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+5 files in other folders)
